Fix breadcrumbs styles for full-width stretching (#922)

--- a/src/ui/styles/variables.scss
+++ b/src/ui/styles/variables.scss
@@ -42,8 +42,6 @@ $monospaceFontFamily: 'Consolas', 'Menlo', 'Ubuntu Mono', monospace;
     --dl-color-entity-dataset: #0abe05;
     --dl-color-entity-dashboard: #ff8c3c;
 
-    --dl-breadcrumbs-max-width: 475px;
-
     &_theme_light {
         --ds-color-relation-line: #d9d9d9;
         --ds-color-avatar: #ededed;
